--- a/.dockerignore
+++ b/.dockerignore
@@ -11,9 +11,10 @@
 **/*.*proj.user
 **/*.dbmdl
 **/*.jfm
-**/bin
 **/charts
 **/docker-compose*
+**/bin
+!ubuntu24/home/**
 **/compose*
 **/Dockerfile*
 **/node_modules
@@ -21,5 +22,6 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+/.build.sh
 LICENSE
 README.md
