--- a/ubuntu24/Dockerfile
+++ b/ubuntu24/Dockerfile
@@ -3,10 +3,17 @@
 ARG platform=linux/amd64
 FROM --platform=${platform} ubuntu:24.10
 
+# Set up basics, locales and timezone
 RUN apt-get update && apt-get install --yes \
+        locales \
         sudo \
+        tzdata \
         zsh \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/* \
+    && locale-gen de_DE.UTF-8 en_DK.UTF-8 en_GB.UTF-8 en_US.UTF-8 \
+    && update-locale LANG=en_DK.UTF-8 \
+    && ln --symbolic --force /usr/share/zoneinfo/Europe/Berlin /etc/localtime \
+    && dpkg-reconfigure --frontend noninteractive tzdata
 
 # Create a non-root user
 ARG userName=mao
@@ -15,6 +22,7 @@ RUN useradd --create-home --shell=/bin/zsh --groups=sudo ${userName} \
 
 # Install other software
 RUN apt-get update && apt-get install --yes --no-install-recommends \
+        apt-file \
         ca-certificates \
         curl \
         file \
@@ -39,9 +47,5 @@ CMD [ "/bin/zsh" ]
 WORKDIR /home/${userName}
 
 ARG name=ubuntu24
-COPY --chown=${userName} --chmod=600 \
-    ${name}/.bash_aliases \
-    ${name}/.zshenv \
-    ${name}/.zshrc \
-    ${name}/.zsh_history \
-    ./
+COPY --chown=${userName} ${name}/home ./
+RUN chmod g-rwx,o-rwx .bash* .zsh*
